Se termina el proyecto de Hola Personalizado, se inicia el proyecto del juego Flip hasta la insercion del audio y los colores en la carpeta Raw y Drawable respectivamente

--- a/HolaPersonalizado/app/src/main/res/values/strings.xml
+++ b/HolaPersonalizado/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="saludoSra">Señora</string>
     <string name="saludo">Saludo</string>
     <string name="tiempo">Mostrar hora</string>
+    <string name="noNameMsg">No se ha introducido el Nombre</string>
 </resources>
