Correcion de juego Flip y colocacion de iconos en el menu de opciones

--- a/Flip/app/src/main/res/values/strings.xml
+++ b/Flip/app/src/main/res/values/strings.xml
@@ -4,20 +4,20 @@
     <string name="menu_player">Jugador</string>
     <string name="menu_howto">Ayuda</string>
     <string name="menu_about">Acerca de</string>
-    <string name="titulo_about">Acerca de Flip</string>
-    <string name="titulo_howto">Como jugar Flip</string>
+    <string name="title_about">Acerca de Flip</string>
+    <string name="title_howto">Como jugar a Flip</string>
 
-    <string name="radioColor">Colores</string>
-    <string name="radioNumero">Números</string>
+    <string name="radio_color">Colores</string>
+    <string name="radio_numero">Números</string>
     <string name="check_sound">Sonido</string>
     <string name="check_vibrate">Vibracion</string>
-    <string name="fin_juego_tiempo">Se finalizo el juego con un total de</string>
-    <string name="fin_juego_pulsaciones">Pulsaciones</string>
+    <string name="game_end_1">Se finalizo el juego con un total de</string>
+    <string name="game_end_2">Pulsaciones</string>
 
-    <string name="num_elem_x">Número de elementos en el eje X</string>
-    <string name="num_elem_y">Número de elementos en el eje Y</string>
-    <string name="num_colores">Número de tramas</string>
-    <string name="score_clicks">Pulsaciones:</string>
-    <string name="score_time">Tiempo:</string>
+    <string name="num_elem_x">Número de elementos en el eje X: </string>
+    <string name="num_elem_y">Número de elementos en el eje Y: </string>
+    <string name="num_colores">Número de tramas: </string>
+    <string name="score_clicks"> Pulsaciones: </string>
+    <string name="score_time"> Tiempo: </string>
 
 </resources>
